@@ -18,7 +18,6 @@ package org.apache.kafka.clients.consumer.internals;
 
 import org.apache.kafka.clients.consumer.AcknowledgeType;
 import org.apache.kafka.clients.consumer.ConsumerConfig;
-import org.apache.kafka.clients.consumer.ShareAcquireMode;
 import org.apache.kafka.common.IsolationLevel;
 import org.apache.kafka.common.TopicIdPartition;
 import org.apache.kafka.common.TopicPartition;
@@ -27,16 +26,17 @@ import org.apache.kafka.common.message.ShareFetchRequestData;
 import org.apache.kafka.common.message.ShareFetchResponseData;
 import org.apache.kafka.common.protocol.ApiKeys;
 import org.apache.kafka.common.protocol.Errors;
+import org.apache.kafka.common.requests.ShareFetchRequest;
 import org.apache.kafka.common.requests.ShareFetchResponse;
 import org.apache.kafka.common.utils.LogContext;
 
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
 import org.junit.jupiter.params.provider.MethodSource;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
@@ -46,6 +46,7 @@ import java.util.stream.Stream;
 
 import static org.apache.kafka.common.requests.ShareRequestMetadata.INITIAL_EPOCH;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
@@ -181,7 +182,7 @@ public class ShareSessionHandlerTest {
         TopicIdPartition foo1 = new TopicIdPartition(fooId, 1, "foo");
         handler.addPartitionToFetch(foo0, null);
         handler.addPartitionToFetch(foo1, null);
-        ShareFetchRequestData requestData1 = handler.newShareFetchBuilder(groupId, DEFAULT_SHARE_FETCH_CONFIG).build().data();
+        ShareFetchRequestData requestData1 = handler.newShareFetchBuilder(groupId, DEFAULT_SHARE_FETCH_CONFIG, false).build().data();
         ArrayList<TopicIdPartition> expectedToSend1 = new ArrayList<>();
         expectedToSend1.add(new TopicIdPartition(fooId, 0, "foo"));
         expectedToSend1.add(new TopicIdPartition(fooId, 1, "foo"));
@@ -193,7 +194,7 @@ public class ShareSessionHandlerTest {
             buildResponseData(new RespEntry("foo", 0, fooId), new RespEntry("foo", 1, fooId)),
             List.of(),
             0);
-        handler.handleResponse(resp, ApiKeys.SHARE_FETCH.latestVersion(true));
+        handler.handleResponse(resp, ApiKeys.SHARE_FETCH.latestVersion());
 
         // Test a fetch request which adds one partition
         Uuid barId = addTopicId(topicNames, "bar");
@@ -201,7 +202,7 @@ public class ShareSessionHandlerTest {
         handler.addPartitionToFetch(foo0, null);
         handler.addPartitionToFetch(foo1, null);
         handler.addPartitionToFetch(bar0, null);
-        ShareFetchRequestData requestData2 = handler.newShareFetchBuilder(groupId, DEFAULT_SHARE_FETCH_CONFIG).build().data();
+        ShareFetchRequestData requestData2 = handler.newShareFetchBuilder(groupId, DEFAULT_SHARE_FETCH_CONFIG, false).build().data();
         assertMapsEqual(reqMap(new TopicIdPartition(fooId, 0, "foo"),
                         new TopicIdPartition(fooId, 1, "foo"),
                         new TopicIdPartition(barId, 0, "bar")),
@@ -215,13 +216,13 @@ public class ShareSessionHandlerTest {
             buildResponseData(new RespEntry("foo", 1, fooId)),
             List.of(),
             0);
-        handler.handleResponse(resp2, ApiKeys.SHARE_FETCH.latestVersion(true));
+        handler.handleResponse(resp2, ApiKeys.SHARE_FETCH.latestVersion());
 
         // A top-level error code will reset the session epoch
         ShareFetchResponse resp3 = ShareFetchResponse.of(error, 0, new LinkedHashMap<>(), List.of(), 0);
-        handler.handleResponse(resp3, ApiKeys.SHARE_FETCH.latestVersion(true));
+        handler.handleResponse(resp3, ApiKeys.SHARE_FETCH.latestVersion());
 
-        ShareFetchRequestData requestData4 = handler.newShareFetchBuilder(groupId, DEFAULT_SHARE_FETCH_CONFIG).build().data();
+        ShareFetchRequestData requestData4 = handler.newShareFetchBuilder(groupId, DEFAULT_SHARE_FETCH_CONFIG, false).build().data();
         assertEquals(requestData2.memberId(), requestData4.memberId());
         assertEquals(INITIAL_EPOCH, requestData4.shareSessionEpoch());
         assertMapsEqual(reqMap(new TopicIdPartition(fooId, 0, "foo"),
@@ -251,7 +252,7 @@ public class ShareSessionHandlerTest {
         handler.addPartitionToFetch(foo0, null);
         handler.addPartitionToFetch(foo1, null);
         handler.addPartitionToFetch(bar0, null);
-        ShareFetchRequestData requestData1 = handler.newShareFetchBuilder(groupId, shareFetchConfig).build().data();
+        ShareFetchRequestData requestData1 = handler.newShareFetchBuilder(groupId, shareFetchConfig, false).build().data();
         assertMapsEqual(reqMap(
                         new TopicIdPartition(fooId, 0, "foo"),
                         new TopicIdPartition(fooId, 1, "foo"),
@@ -272,11 +273,11 @@ public class ShareSessionHandlerTest {
                 new RespEntry("bar", 0, barId)),
             List.of(),
             0);
-        handler.handleResponse(resp, ApiKeys.SHARE_FETCH.latestVersion(true));
+        handler.handleResponse(resp, ApiKeys.SHARE_FETCH.latestVersion());
 
         // Test a fetch request which removes two partitions
         handler.addPartitionToFetch(foo1, null);
-        ShareFetchRequestData requestData2 = handler.newShareFetchBuilder(groupId, shareFetchConfig).build().data();
+        ShareFetchRequestData requestData2 = handler.newShareFetchBuilder(groupId, shareFetchConfig, false).build().data();
         assertEquals(memberId.toString(), requestData2.memberId());
         assertEquals(1, requestData2.shareSessionEpoch());
         assertMapsEqual(reqMap(new TopicIdPartition(fooId, 1, "foo")),
@@ -289,10 +290,10 @@ public class ShareSessionHandlerTest {
 
         // A top-level error code will reset the session epoch
         ShareFetchResponse resp2 = ShareFetchResponse.of(Errors.INVALID_SHARE_SESSION_EPOCH, 0, new LinkedHashMap<>(), List.of(), 0);
-        handler.handleResponse(resp2, ApiKeys.SHARE_FETCH.latestVersion(true));
+        handler.handleResponse(resp2, ApiKeys.SHARE_FETCH.latestVersion());
 
         handler.addPartitionToFetch(foo1, null);
-        ShareFetchRequestData requestData3 = handler.newShareFetchBuilder(groupId, shareFetchConfig).build().data();
+        ShareFetchRequestData requestData3 = handler.newShareFetchBuilder(groupId, shareFetchConfig, false).build().data();
         assertEquals(memberId.toString(), requestData3.memberId());
         assertEquals(INITIAL_EPOCH, requestData3.shareSessionEpoch());
         assertMapsEqual(reqMap(new TopicIdPartition(fooId, 1, "foo")),
@@ -313,7 +314,7 @@ public class ShareSessionHandlerTest {
         Uuid topicId1 = addTopicId(topicNames, "foo");
         TopicIdPartition tp = new TopicIdPartition(topicId1, 0, "foo");
         handler.addPartitionToFetch(tp, null);
-        ShareFetchRequestData requestData1 = handler.newShareFetchBuilder(groupId, shareFetchConfig).build().data();
+        ShareFetchRequestData requestData1 = handler.newShareFetchBuilder(groupId, shareFetchConfig, false).build().data();
         assertMapsEqual(reqMap(new TopicIdPartition(topicId1, 0, "foo")),
                 handler.sessionPartitionMap());
         ArrayList<TopicIdPartition> expectedToSend1 = new ArrayList<>();
@@ -325,21 +326,21 @@ public class ShareSessionHandlerTest {
             buildResponseData(new RespEntry("foo", 0, topicId1)),
             List.of(),
             0);
-        handler.handleResponse(resp, ApiKeys.SHARE_FETCH.latestVersion(true));
+        handler.handleResponse(resp, ApiKeys.SHARE_FETCH.latestVersion());
 
         // Try to add a new topic ID
         Uuid topicId2 = addTopicId(topicNames, "foo");
         TopicIdPartition tp2 = new TopicIdPartition(topicId2, 0, "foo");
         // Use the same data besides the topic ID
         handler.addPartitionToFetch(tp2, null);
-        ShareFetchRequestData requestData2 = handler.newShareFetchBuilder(groupId, shareFetchConfig).build().data();
+        ShareFetchRequestData requestData2 = handler.newShareFetchBuilder(groupId, shareFetchConfig, false).build().data();
 
         // If we started with an ID, only a new ID will count towards replaced.
         // The old topic ID partition should be forgotten, and the new one should be fetched.
-        assertEquals(Collections.singletonList(tp), reqForgetList(requestData2, topicNames));
+        assertEquals(List.of(tp), reqForgetList(requestData2, topicNames));
         assertMapsEqual(reqMap(new TopicIdPartition(topicId2, 0, "foo")),
                 handler.sessionPartitionMap());
-        assertListEquals(Collections.singletonList(tp2), reqFetchList(requestData2, topicNames));
+        assertListEquals(List.of(tp2), reqFetchList(requestData2, topicNames));
 
         // Should have the same session ID, and next epoch and can use topic IDs if it ended with topic IDs.
         assertEquals(memberId.toString(), requestData2.memberId(), "Did not use same session");
@@ -358,7 +359,7 @@ public class ShareSessionHandlerTest {
         Uuid topicId = addTopicId(topicNames, "foo");
         TopicIdPartition foo0 = new TopicIdPartition(topicId, 0, "foo");
         handler.addPartitionToFetch(foo0, null);
-        ShareFetchRequestData requestData1 = handler.newShareFetchBuilder(groupId, shareFetchConfig).build().data();
+        ShareFetchRequestData requestData1 = handler.newShareFetchBuilder(groupId, shareFetchConfig, false).build().data();
         assertMapsEqual(reqMap(foo0), handler.sessionPartitionMap());
         ArrayList<TopicIdPartition> expectedToSend1 = new ArrayList<>();
         expectedToSend1.add(new TopicIdPartition(topicId, 0, "foo"));
@@ -369,12 +370,12 @@ public class ShareSessionHandlerTest {
             buildResponseData(new RespEntry("foo", 0, topicId)),
             List.of(),
             0);
-        handler.handleResponse(resp, ApiKeys.SHARE_FETCH.latestVersion(true));
+        handler.handleResponse(resp, ApiKeys.SHARE_FETCH.latestVersion());
 
         // Remove the topic from the session by setting acknowledgements only - this is not asking to fetch records
-        ShareFetchRequestData requestData2 = handler.newShareFetchBuilder(groupId, shareFetchConfig).build().data();
+        ShareFetchRequestData requestData2 = handler.newShareFetchBuilder(groupId, shareFetchConfig, false).build().data();
         handler.addPartitionToAcknowledgeOnly(foo0, Acknowledgements.empty());
-        assertEquals(Collections.singletonList(foo0), reqForgetList(requestData2, topicNames));
+        assertEquals(List.of(foo0), reqForgetList(requestData2, topicNames));
 
         // Should have the same session ID, next epoch, and same ID usage
         assertEquals(memberId.toString(), requestData2.memberId(), "Did not use same session");
@@ -393,7 +394,7 @@ public class ShareSessionHandlerTest {
         Uuid topicId = addTopicId(topicNames, "foo");
         TopicIdPartition foo0 = new TopicIdPartition(topicId, 0, "foo");
         handler.addPartitionToFetch(foo0, null);
-        ShareFetchRequestData requestData1 = handler.newShareFetchBuilder(groupId, shareFetchConfig).build().data();
+        ShareFetchRequestData requestData1 = handler.newShareFetchBuilder(groupId, shareFetchConfig, false).build().data();
         assertMapsEqual(reqMap(foo0), handler.sessionPartitionMap());
         ArrayList<TopicIdPartition> expectedToSend1 = new ArrayList<>();
         expectedToSend1.add(new TopicIdPartition(topicId, 0, "foo"));
@@ -404,11 +405,11 @@ public class ShareSessionHandlerTest {
             buildResponseData(new RespEntry("foo", 0, topicId)),
             List.of(),
             0);
-        handler.handleResponse(resp, ApiKeys.SHARE_FETCH.latestVersion(true));
+        handler.handleResponse(resp, ApiKeys.SHARE_FETCH.latestVersion());
 
         // Remove the topic from the session
-        ShareFetchRequestData requestData2 = handler.newShareFetchBuilder(groupId, shareFetchConfig).build().data();
-        assertEquals(Collections.singletonList(foo0), reqForgetList(requestData2, topicNames));
+        ShareFetchRequestData requestData2 = handler.newShareFetchBuilder(groupId, shareFetchConfig, false).build().data();
+        assertEquals(List.of(foo0), reqForgetList(requestData2, topicNames));
 
         // Should have the same session ID, next epoch, and same ID usage
         assertEquals(memberId.toString(), requestData2.memberId(), "Did not use same session");
@@ -425,7 +426,7 @@ public class ShareSessionHandlerTest {
         Map<Uuid, String> topicNames = new HashMap<>();
         Uuid topicId = addTopicId(topicNames, "foo");
         handler.addPartitionToFetch(new TopicIdPartition(topicId, 0, "foo"), null);
-        ShareFetchRequestData requestData1 = handler.newShareFetchBuilder(groupId, shareFetchConfig).build().data();
+        ShareFetchRequestData requestData1 = handler.newShareFetchBuilder(groupId, shareFetchConfig, false).build().data();
         assertMapsEqual(reqMap(new TopicIdPartition(topicId, 0, "foo")),
                 handler.sessionPartitionMap());
         ArrayList<TopicIdPartition> expectedToSend1 = new ArrayList<>();
@@ -437,19 +438,19 @@ public class ShareSessionHandlerTest {
             buildResponseData(new RespEntry("foo", 0, topicId)),
             List.of(),
             0);
-        handler.handleResponse(resp, ApiKeys.SHARE_FETCH.latestVersion(true));
+        handler.handleResponse(resp, ApiKeys.SHARE_FETCH.latestVersion());
 
         // Remove the partition from the session
-        ShareFetchRequestData requestData2 = handler.newShareFetchBuilder(groupId, shareFetchConfig).build().data();
+        ShareFetchRequestData requestData2 = handler.newShareFetchBuilder(groupId, shareFetchConfig, false).build().data();
         assertTrue(handler.sessionPartitionMap().isEmpty());
         assertTrue(requestData2.topics().isEmpty());
         ShareFetchResponse resp2 = ShareFetchResponse.of(Errors.NONE, 0, new LinkedHashMap<>(), List.of(), 0);
-        handler.handleResponse(resp2, ApiKeys.SHARE_FETCH.latestVersion(true));
+        handler.handleResponse(resp2, ApiKeys.SHARE_FETCH.latestVersion());
 
         // After the topic is removed, add a recreated topic with a new ID
         Uuid topicId2 = addTopicId(topicNames, "foo");
         handler.addPartitionToFetch(new TopicIdPartition(topicId2, 0, "foo"), null);
-        ShareFetchRequestData requestData3 = handler.newShareFetchBuilder(groupId, shareFetchConfig).build().data();
+        ShareFetchRequestData requestData3 = handler.newShareFetchBuilder(groupId, shareFetchConfig, false).build().data();
 
         // Should have the same session ID and epoch 2.
         assertEquals(memberId.toString(), requestData3.memberId(), "Did not use same session");
@@ -473,12 +474,12 @@ public class ShareSessionHandlerTest {
         handler.addPartitionToFetch(foo0, acknowledgements);
 
         // As we start with a ShareAcknowledge on epoch 0, we expect a null response.
-        assertNull(handler.newShareAcknowledgeBuilder(groupId, shareFetchConfig));
+        assertNull(handler.newShareAcknowledgeBuilder(groupId));
 
         // Attempt a new ShareFetch
         TopicIdPartition foo1 = new TopicIdPartition(fooId, 1, "foo");
         handler.addPartitionToFetch(foo1, null);
-        ShareFetchRequestData requestData = handler.newShareFetchBuilder(groupId, shareFetchConfig).build().data();
+        ShareFetchRequestData requestData = handler.newShareFetchBuilder(groupId, shareFetchConfig, false).build().data();
 
         // We should have cleared the unsent acknowledgements before this ShareFetch.
         assertEquals(0, requestData.topics().stream().findFirst().get().partitions().stream().findFirst().get().acknowledgementBatches().size());
@@ -487,6 +488,54 @@ public class ShareSessionHandlerTest {
         expectedToSend1.add(new TopicIdPartition(fooId, 1, "foo"));
         assertListEquals(expectedToSend1, reqFetchList(requestData, topicNames));
         assertEquals(memberId.toString(), requestData.memberId());
+    }
+
+    @Test
+    public void testCanSkipIfRequestEmpty() {
+        ShareFetchConfig shareFetchConfig = SHARE_FETCH_CONFIG_RECORD_LIMIT;
+
+        String groupId = "G1";
+        Uuid memberId = Uuid.randomUuid();
+        ShareSessionHandler handler = new ShareSessionHandler(LOG_CONTEXT, 1, memberId);
+
+        Map<Uuid, String> topicNames = new HashMap<>();
+        Uuid fooId = addTopicId(topicNames, "foo");
+        TopicIdPartition foo0 = new TopicIdPartition(fooId, 0, "foo");
+
+        Acknowledgements acknowledgements = Acknowledgements.empty();
+        acknowledgements.add(0L, AcknowledgeType.ACCEPT);
+
+        // The request cannot be skipped when a topic-partition is added to the share session.
+        handler.addPartitionToFetch(foo0, null);
+        ShareFetchRequest.Builder builder = handler.newShareFetchBuilder(groupId, shareFetchConfig, true);
+        assertNotNull(builder);
+
+        ShareFetchResponse resp = ShareFetchResponse.of(Errors.NONE,
+            0,
+            buildResponseData(new RespEntry("foo", 0, fooId)),
+            List.of(),
+            0);
+        handler.handleResponse(resp, ApiKeys.SHARE_FETCH.latestVersion());
+
+        // The request can be skipped when the same topic-partition is already in the share session.
+        handler.addPartitionToFetch(foo0, null);
+        builder = handler.newShareFetchBuilder(groupId, shareFetchConfig, true);
+        assertNull(builder);
+
+        // The request cannot be skipped when there are acknowledgements.
+        handler.addPartitionToFetch(foo0, acknowledgements);
+        builder = handler.newShareFetchBuilder(groupId, shareFetchConfig, true);
+        assertNotNull(builder);
+        handler.handleResponse(resp, ApiKeys.SHARE_FETCH.latestVersion());
+
+        // The request cannot be skipped when the topic-partition is removed from the share session.
+        builder = handler.newShareFetchBuilder(groupId, shareFetchConfig, true);
+        assertNotNull(builder);
+        handler.handleResponse(ShareFetchResponse.of(Errors.NONE, 0, new LinkedHashMap<>(), List.of(), 0), ApiKeys.SHARE_FETCH.latestVersion());
+
+        // The request can be skipped when the share session is empty.
+        builder = handler.newShareFetchBuilder(groupId, shareFetchConfig, true);
+        assertNull(builder);
     }
 
     private Uuid addTopicId(Map<Uuid, String> topicNames, String name) {
